# AiDataTaskRunerMcp

./: .gitignore  AiDataTaskRunerMcp.mqproj  LICENSE  README.md  dependencies.json  pyproject.toml  requirements.txt  server.json
Src/: __init__.py
aidatataskrunner_mcp/: __init__.py  __main__.py  aidatataskruner_mcp.py  tools.json
