[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aidatataskrunner-mcp"
version = "1.0.8"
description = "MCP server for AiDataTaskRunner Panel (MT5) - Control AiDataTaskRuner Panel for data generation and ML model training via MCP"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Nique Mendoza", email = "tradesystemsnique@gmail.com"}, 
    {name = "Leo", email = "leo@example.com"}, 
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0"
]
 
[project.urls]
Repository = "https://forge.mql5.io/nique_372/AiDataTaskRunerMcp"
Documentation = "https://forge.mql5.io/nique_372/AiDataTaskRunerMcp"
Issues = "https://forge.mql5.io/nique_372/AiDataTaskRunerMcp/issues"

[project.scripts]
aidatataskrunner_mcp = "aidatataskrunner_mcp.aidatataskruner_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["aidatataskrunner_mcp"] 